refactor: Put ICommand interface into it's own file.
fix: Fixed include directories for cmake and ycm.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_COMPILER "clang++")
 
 project("Simple Issue Tracker")
 
+include_directories("inc")
 add_subdirectory(inc)
 add_subdirectory(src)
 add_subdirectory(test)
